--- a/Module0/2_13_2025_Module0_Notebook2_SimpleClassification.ipynb
+++ b/Module0/2_13_2025_Module0_Notebook2_SimpleClassification.ipynb
@@ -412,12 +412,12 @@
         "plot_grid(4,mri_train)"
       ],
       "metadata": {
-        "id": "GDIbfSVgcRU-",
-        "outputId": "03709162-4d4a-4a13-91d5-250e9bb24c2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 672
-        }
+        },
+        "id": "GDIbfSVgcRU-",
+        "outputId": "03709162-4d4a-4a13-91d5-250e9bb24c2e"
       },
       "execution_count": 15,
       "outputs": [
@@ -440,12 +440,12 @@
         "plot_grid(4,mri_train)"
       ],
       "metadata": {
-        "id": "_9MTd_rHcowG",
-        "outputId": "7741c495-f3db-44f3-9438-a9dbf4ba73c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 672
-        }
+        },
+        "id": "_9MTd_rHcowG",
+        "outputId": "7741c495-f3db-44f3-9438-a9dbf4ba73c6"
       },
       "execution_count": 16,
       "outputs": [
@@ -798,12 +798,12 @@
         "train_df.label.value_counts()"
       ],
       "metadata": {
-        "id": "HgV6IpeZgmCe",
-        "outputId": "7c820bf7-6cb8-498f-d0a6-eb0ce4aaee96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
-        }
+        },
+        "id": "HgV6IpeZgmCe",
+        "outputId": "7c820bf7-6cb8-498f-d0a6-eb0ce4aaee96"
       },
       "execution_count": 20,
       "outputs": [
@@ -878,52 +878,91 @@
     {
       "cell_type": "code",
       "source": [
-        "train_dataset"
+        "train_df.shape"
       ],
       "metadata": {
-        "id": "wEifb8UuhBfX",
-        "outputId": "3badeaf7-2b24-42a6-e4ac-6bb5a67f7a03",
+        "id": "4ey3x79HiUyI",
+        "outputId": "a8db523e-a342-4533-a121-596feec48f14",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch.utils.data.dataset.Subset at 0x7c069fe4ae50>"
+              "(2355, 2)"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 42
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "len(train_dataset.dataset)"
+        "# prompt: create a random integer index of length 1648 between 0 and 2355\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "# Generate a list of 1648 random integers between 0 and 2355\n",
+        "random_indices = [random.randint(0, 2355) for _ in range(1648)]\n",
+        "\n"
       ],
       "metadata": {
-        "id": "2rW1pU2ehM_k",
-        "outputId": "f83141af-b52b-421c-ddbe-96f8737d390b",
+        "id": "mLR4vNq9ibrU"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_updated_df = train_df.iloc[random_indices]"
+      ],
+      "metadata": {
+        "id": "2rW1pU2ehM_k"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "val_df = train_df.drop(random_indices)"
+      ],
+      "metadata": {
+        "id": "98lIZVtQibBF"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_updated_df.shape, val_df.shape"
+      ],
+      "metadata": {
+        "id": "ua6CW__4i0SP",
+        "outputId": "10b1dda2-3ae9-4334-9ffd-e68a32ce9cbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2355"
+              "((1648, 2), (1166, 2))"
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 49
         }
       ]
     },
@@ -933,12 +972,12 @@
         "train_dataset.dataset"
       ],
       "metadata": {
-        "id": "vqx9kF5ThgUj",
-        "outputId": "891f1e43-7f78-4aa9-ec96-40a13bfeb0bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "vqx9kF5ThgUj",
+        "outputId": "891f1e43-7f78-4aa9-ec96-40a13bfeb0bf"
       },
       "execution_count": 34,
       "outputs": [
@@ -1328,12 +1367,12 @@
         "val_dataset.dataset.label.value_counts()"
       ],
       "metadata": {
-        "id": "lnijHarghcMt",
-        "outputId": "ffc5acba-a324-4819-d17f-e4d0d53f729c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
-        }
+        },
+        "id": "lnijHarghcMt",
+        "outputId": "ffc5acba-a324-4819-d17f-e4d0d53f729c"
       },
       "execution_count": 36,
       "outputs": [
@@ -1399,24 +1438,35 @@
         "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)"
       ],
       "metadata": {
-        "id": "sd5ox8fQguhV",
-        "outputId": "1cd041bf-3e7d-472a-8f87-e93ded13ae31",
+        "id": "sd5ox8fQguhV"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loader.dataset.dataframe.shape"
+      ],
+      "metadata": {
+        "id": "psGGrzp6iJGe",
+        "outputId": "b9b0f491-295e-4e29-9655-810858d70355",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 176
+          "height": 141
         }
       },
-      "execution_count": 21,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'train_dataset' is not defined",
+          "ename": "AttributeError",
+          "evalue": "'Subset' object has no attribute 'dataframe'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-3758f511e2be>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create data loaders\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mval_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'train_dataset' is not defined"
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-41-afbc4342bc3b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Subset' object has no attribute 'dataframe'"
           ]
         }
       ]
