--- a/Module0/2_13_2025_Module0_Notebook2_SimpleClassification.ipynb
+++ b/Module0/2_13_2025_Module0_Notebook2_SimpleClassification.ipynb
@@ -881,11 +881,11 @@
         "train_df.shape"
       ],
       "metadata": {
-        "id": "4ey3x79HiUyI",
-        "outputId": "a8db523e-a342-4533-a121-596feec48f14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4ey3x79HiUyI",
+        "outputId": "a8db523e-a342-4533-a121-596feec48f14"
       },
       "execution_count": 42,
       "outputs": [
@@ -946,11 +946,11 @@
         "train_updated_df.shape, val_df.shape"
       ],
       "metadata": {
-        "id": "ua6CW__4i0SP",
-        "outputId": "10b1dda2-3ae9-4334-9ffd-e68a32ce9cbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ua6CW__4i0SP",
+        "outputId": "10b1dda2-3ae9-4334-9ffd-e68a32ce9cbb"
       },
       "execution_count": 49,
       "outputs": [
@@ -1432,6 +1432,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5PFLxhmEewvd"
+      },
+      "outputs": [],
+      "source": [
+        "# Create dataset\n",
+        "train_dataset = CustomImageDataset(dataframe=train_updated_df, classes=['MRI', 'PET'], transform=transform)\n",
+        "val_dataset = CustomImageDataset(dataframe=val_df, classes=['MRI', 'PET'], transform=transform)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Create data loaders\n",
         "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
@@ -1441,58 +1455,6 @@
         "id": "sd5ox8fQguhV"
       },
       "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "train_loader.dataset.dataframe.shape"
-      ],
-      "metadata": {
-        "id": "psGGrzp6iJGe",
-        "outputId": "b9b0f491-295e-4e29-9655-810858d70355",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        }
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'Subset' object has no attribute 'dataframe'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-41-afbc4342bc3b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Subset' object has no attribute 'dataframe'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "5PFLxhmEewvd"
-      },
-      "outputs": [],
-      "source": [
-        "# Create dataset\n",
-        "dataset = CustomImageDataset(dataframe=train_df, classes=['MRI', 'PET'], transform=transform)\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "metadata": {
-        "id": "6rmreo1HgiYS"
-      },
-      "execution_count": null,
       "outputs": []
     },
     {
