--- a/Module0/2_13_2025_Module0_Notebook2_SimpleClassification.ipynb
+++ b/Module0/2_13_2025_Module0_Notebook2_SimpleClassification.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "uI6EXdxMtatL"
       },
@@ -58,12 +58,12 @@
       "metadata": {
         "id": "8nloNmR2mBZg"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "Rd5N4i2iQkyp"
       },
@@ -161,7 +161,7 @@
         "id": "pmGHAwl4kwPf",
         "outputId": "6112d700-5b79-4fd7-a76e-08ccb05b811c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "id": "qVORBSoglP33",
         "outputId": "f66eed33-8a8d-4c37-bced-c159438b3674"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "DOHnbeZi7Onw"
       },
@@ -218,7 +218,7 @@
         "id": "Wx_67P0-lTkp",
         "outputId": "dd457088-f89a-479f-8e55-21af9af10c9f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
         "id": "YC_vllvplWns",
         "outputId": "adff556a-0df4-45b5-df9d-0ccf85e6ed79"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "t4jXUJmJlYpT"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -340,7 +340,7 @@
         "id": "RMvWMSDUu6C0",
         "outputId": "2aec32dc-554c-47e6-cb6d-fd8c006c4fcf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "mqayTf_WGNTP"
       },
@@ -419,7 +419,7 @@
         "id": "GDIbfSVgcRU-",
         "outputId": "c2eb7a63-9841-470b-a355-277e0e75e94c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -447,7 +447,7 @@
         "id": "_9MTd_rHcowG",
         "outputId": "2d55eda4-53a8-4ace-b800-8463276214f5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -530,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "UDkvw38ZSOPJ"
       },
@@ -592,7 +592,7 @@
       "metadata": {
         "id": "kufZTXl3nX_J"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,14 +608,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "OGwaAG6vUhyJ"
       },
       "outputs": [],
       "source": [
         "# Define image transformations\n",
-        "transform = transforms.Compose([\n",
+        "general_transform = transforms.Compose([\n",
         "    transforms.Resize((128, 128)),\n",
         "#    transforms.RandomCrop(128),\n",
         "    transforms.ToTensor(),\n",
@@ -648,7 +648,7 @@
         "id": "upPiWydPr-z9",
         "outputId": "e204a153-9c02-4797-8c06-fd9619188dfa"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +805,7 @@
         "id": "HgV6IpeZgmCe",
         "outputId": "6a994038-7146-4be3-8e27-44b1a4cf07ed"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,7 +873,7 @@
         "id": "4ey3x79HiUyI",
         "outputId": "dc9f82a0-a83f-409d-f3b7-72efc1cbfdb4"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +896,7 @@
       "metadata": {
         "id": "L61dY1sZ5eoe"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -911,7 +911,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,7 +933,7 @@
       "metadata": {
         "id": "n64FHaW_4nc0"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -948,7 +948,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +970,7 @@
       "metadata": {
         "id": "2rW1pU2ehM_k"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -985,7 +985,7 @@
         "id": "ua6CW__4i0SP",
         "outputId": "42fdcff5-d608-4fd9-f5bd-f3f19c7d2974"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,7 +1012,7 @@
           "height": 178
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1081,7 +1081,7 @@
           "height": 178
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1139,15 +1139,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "5PFLxhmEewvd"
       },
       "outputs": [],
       "source": [
         "# Create dataset\n",
-        "train_dataset = CustomImageDataset(dataframe=train_df, classes=['MRI', 'PET'], transform=transform)\n",
-        "val_dataset = CustomImageDataset(dataframe=val_df, classes=['MRI', 'PET'], transform=transform)\n",
+        "train_dataset = CustomImageDataset(dataframe=train_df, classes=['MRI', 'PET'], transform=general_transform)\n",
+        "val_dataset = CustomImageDataset(dataframe=val_df, classes=['MRI', 'PET'], transform=general_transform)\n",
         "\n"
       ]
     },
@@ -1161,7 +1161,7 @@
       "metadata": {
         "id": "sd5ox8fQguhV"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1187,7 +1187,7 @@
         "id": "U3sQhA3lsupu",
         "outputId": "771c1d4a-e5a4-4efa-fd2b-f7892a574b85"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,7 +1333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1380,7 +1380,7 @@
         "id": "RAsN2VPskHEc",
         "outputId": "a8cd23dc-b035-4ccd-ade2-f48bbc19eff7"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1415,7 +1415,7 @@
         "id": "v27rAL5mtSsB",
         "outputId": "5d6c6c71-4af8-481e-97db-c1d23075d7dc"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1442,7 +1442,7 @@
         "id": "sqkeHUpEtlRf",
         "outputId": "b3483654-a9d7-46a9-fd33-25eead06d9c5"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1479,7 +1479,7 @@
         "id": "Ye6F2VwrkiNE",
         "outputId": "77c785d3-e1f3-41e6-9c36-0700d6ef171d"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1505,7 +1505,7 @@
         "id": "14Xl1Tn4kj9S",
         "outputId": "c8c1db4b-3e7b-478b-d050-e3cd06ab4c0e"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1530,7 +1530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1655,7 +1655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "VvstuOpPtgIV"
       },
@@ -1699,6 +1699,31 @@
       "source": [
         "Lets look at the summary of the model we specified."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "little_nn = nn.Sequential(nn.Conv2d(3, 32, kernel_size=3, stride=1, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2))"
+      ],
+      "metadata": {
+        "id": "VmKG_nlITnXA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "output_x_test_thru_little_nn = little_nn(x_test)"
+      ],
+      "metadata": {
+        "id": "fVwWVi9aTwlb"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1772,13 +1797,13 @@
         "    all_probs = []\n",
         "\n",
         "    for images, labels in tqdm(data_loader, desc='Training' if train else 'Validation', leave=False):\n",
-        "        images, labels = images.to(device), labels.to(device)\n",
+        "        images, ground_truth_labels = images.to(device), labels.to(device)\n",
         "\n",
-        "        if train:\n",
+        "        if train: ## look up if curious\n",
         "            optimizer.zero_grad()\n",
         "\n",
-        "        outputs = model(images)\n",
-        "        loss = criterion(outputs, labels)\n",
+        "        model_outputs = model(images)\n",
+        "        loss = criterion(model_outputs, ground_truth_labels)\n",
         "        running_loss += loss.item()\n",
         "\n",
         "        if train:\n",
@@ -1808,8 +1833,8 @@
         "    device = torch.device('cuda' if use_gpu and torch.cuda.is_available() else 'cpu')\n",
         "    model.to(device)\n",
         "\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
-        "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+        "    criterion = nn.BCELoss() ## loss function that you choose\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=learning_rate) ## optimizer choice, go to pytorch docs to find other optimizers\n",
         "\n",
         "    metrics = {'epoch': [], 'train_loss': [], 'train_accuracy': [], 'train_auc': [],\n",
         "               'val_loss': [], 'val_accuracy': [], 'val_auc': []}\n",
