--- a/Module1/02_20_2025_Module1_NB2_ADNI_ADClassification.ipynb
+++ b/Module1/02_20_2025_Module1_NB2_ADNI_ADClassification.ipynb
@@ -2119,11 +2119,11 @@
         "resnet18._modules['conv1']"
       ],
       "metadata": {
-        "id": "nvPJRZOZ1hK7",
-        "outputId": "9e4596d7-5d62-46f9-cda3-e79e401d88bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nvPJRZOZ1hK7",
+        "outputId": "9e4596d7-5d62-46f9-cda3-e79e401d88bd"
       },
       "execution_count": 66,
       "outputs": [
@@ -2145,11 +2145,11 @@
         "resnet18._modules['layer1']"
       ],
       "metadata": {
-        "id": "FfFBiO7g1MoZ",
-        "outputId": "f4f348db-f284-4eec-ecf3-0141565f7973",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FfFBiO7g1MoZ",
+        "outputId": "f4f348db-f284-4eec-ecf3-0141565f7973"
       },
       "execution_count": 62,
       "outputs": [
@@ -2303,11 +2303,11 @@
         "resnet18 = resnet18.to(device)"
       ],
       "metadata": {
-        "id": "rpfCAzv-4FLe",
-        "outputId": "e0778450-eea2-4f92-8040-50c2ba5c034e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rpfCAzv-4FLe",
+        "outputId": "e0778450-eea2-4f92-8040-50c2ba5c034e"
       },
       "execution_count": 77,
       "outputs": [
@@ -2387,13 +2387,13 @@
         "    print(f\"Epoch {epoch+1}/{num_epochs}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_accuracy:.4f}\")"
       ],
       "metadata": {
-        "id": "RFTpcJgQ4shK",
-        "outputId": "b392259e-a146-424c-fbed-3cf9a003e2d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RFTpcJgQ4shK",
+        "outputId": "b392259e-a146-424c-fbed-3cf9a003e2d3"
       },
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -2410,7 +2410,8 @@
             "Epoch 1/5, Train Loss: 0.6987, Val Loss: 0.6932, Val Acc: 0.6731\n",
             "Epoch 2/5, Train Loss: 0.7201, Val Loss: 0.6912, Val Acc: 0.6923\n",
             "Epoch 3/5, Train Loss: 0.6754, Val Loss: 0.6848, Val Acc: 0.6923\n",
-            "Epoch 4/5, Train Loss: 0.6783, Val Loss: 0.6631, Val Acc: 0.6731\n"
+            "Epoch 4/5, Train Loss: 0.6783, Val Loss: 0.6631, Val Acc: 0.6731\n",
+            "Epoch 5/5, Train Loss: 0.6863, Val Loss: 0.6468, Val Acc: 0.6731\n"
           ]
         }
       ]
@@ -2490,10 +2491,31 @@
         "    print(f\"Fine-tuning Epoch {epoch+1}/{num_epochs_fine}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_accuracy:.4f}\")"
       ],
       "metadata": {
-        "id": "aptmJRN84xv1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aptmJRN84xv1",
+        "outputId": "900ec456-695e-4958-c7b7-146f07f87db3"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-30-cc998530ced4>:27: RuntimeWarning: overflow encountered in scalar subtract\n",
+            "  normalized_image = ((image - min_val) / (max_val - min_val) * 255).astype(np.uint8)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fine-tuning Epoch 1/5, Train Loss: 0.6167, Val Loss: 0.6033, Val Acc: 0.6923\n",
+            "Fine-tuning Epoch 2/5, Train Loss: 0.5331, Val Loss: 0.5787, Val Acc: 0.7308\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
